bk_ida/gccida/c1/recog_22
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/insn-recog.c:27605:10: error: conflicting types for 'recog_22'
__int64  recog_22( rtx x0, rtx insn, int *pnum_clobbers) 
         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/insn-recog.c:27141:12: note: previous declaration is here
static int recog_22 PARAMS ((rtx, rtx, int *));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/insn-recog.c:27703:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v4; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/insn-recog.c:27707:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v6; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/insn-recog.c:27714:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( recog_data_0.operand[0] = v9, ( target_flags & 0x2000000) == 0) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/insn-recog.c:27723:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v6; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/insn-recog.c:27730:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v13; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/insn-recog.c:27733:38: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& rtx_equal_p( *( rtx *)( v14 + 8), recog_data_0.operand[1]) 
                                     ^~~~~~~~~~~~
                                     recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/insn-recog.c:27734:39: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& rtx_equal_p( *( rtx *)( v14 + 16), recog_data_0.operand[2]) 
                                      ^~~~~~~~~~~~
                                      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/insn-recog.c:27738:47: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v15 = ix86_binary_operator_ok( MINUS, SImode, recog_data_0.operand); 
                                              ^~~~~~~~~~~~
                                              recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/insn-recog.c:27752:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v16; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/insn-recog.c:27756:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v17; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/insn-recog.c:27766:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v85; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/insn-recog.c:27769:17: error: use of undeclared identifier 'recog_data_0'
&& ( *( _WORD *)recog_data_0.operand[1] != 66 || *( _WORD *)recog_data_0.operand[2] != 66) 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/insn-recog.c:27769:61: error: use of undeclared identifier 'recog_data_0'
&& ( *( _WORD *)recog_data_0.operand[1] != 66 || *( _WORD *)recog_data_0.operand[2] != 66) 
                                                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/insn-recog.c:27770:27: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& !pic_symbolic_operand( recog_data_0.operand[2], VOIDmode) ) 
                          ^~~~~~~~~~~~
                          recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/insn-recog.c:27781:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v20; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/insn-recog.c:27784:38: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& rtx_equal_p( *( rtx *)( v21 + 8), recog_data_0.operand[1]) 
                                     ^~~~~~~~~~~~
                                     recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/insn-recog.c:27785:39: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& rtx_equal_p( *( rtx *)( v21 + 16), recog_data_0.operand[2]) 
                                      ^~~~~~~~~~~~
                                      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/insn-recog.c:27788:43: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ix86_binary_operator_ok( PLUS, DImode, recog_data_0.operand) 
                                          ^~~~~~~~~~~~
                                          recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_22/src/obj/insn-recog.o] Error 1
